@@ -26,6 +26,7 @@ dmredstore = False
 dmfile_skipfactor = 5
 hamilstore = False
 occenstore = False
+occensingle = 3
 offdiag = False
 energiesstore = False
 decompstore = False
